# libdecor

./: .clang-format  .gitlab-ci.yml  README  README.md  config.h.meson  demo.sh  format_source.sh  meson.build  meson_options.txt
demo/: c++-demo.cc  demo.c  egl.c  meson.build  plugin.c
src/: cursor-settings.c  libdecor-fallback.c  libdecor-plugin.h  libdecor.c  libdecor.h  libdecoration-fallback.c  libdecoration-fallback.h  libdecoration-plugin.h  libdecoration.c  libdecoration.h  meson.build  os-compatibility.c  utils.h
src/plugins/: meson.build
src/plugins/cairo/: libdecor-cairo.c  libdecoration-cairo-blur.c  libdecoration-cairo.c  libdecoration-cairo.h  meson.build
src/plugins/common/: libdecor-os-utils.c  libdecor-os-utils.h  libdecor-process-utils.c  libdecor-process-utils.h  meson.build
src/plugins/dummy/: libdecor-dummy.c  meson.build
src/plugins/gtk/: libdecor-gtk.c  meson.build
src/plugins/gtk4/: libdecor-gtk4-client.c  libdecor-gtk4-tunnels.c  libdecor-gtk4-tunnels.h  libdecor-gtk4.c  libdecor-shell.xml  meson.build
